Changes in NEXT
===============
	* build-sys: Make disable-statx work
	* killall: small formatting fixes Debian #1037231

Changes in 23.6
===============
        * buildsys: Fix DEJAGNU work-around Debian #1015089
	* killall: Use kill if pidfd_send_signal fails Debian #1015228
	* fuser: Do not mention nonexistent - reset option #42
	* fuser: Use modern statn where possible
	* pstree: Better AppArmor support !30

Changes in 23.5
===============
	* killall: Check truncated names !28
	* killall: Use openat and pidfd_send_signal #37
	* killall: Don't check paths of sockets #35
        * pstree: Check for process with show_parents #38
	* pstree: Don't disable compaction with show pgids #34
	* pstree: Fix storage leak !29

Changes in 23.4
===============
        * killall: Dynamically link to selinux and use security attributes
	* pstree: Do not crash on missing processes !21
	* pstree: fix layout when using -C !24
	* pstree: add time namespace !25
	* pstree: Dynamically link to selinux and use attr
	* fuser: Get less confused about duplicate dev_id !10
	* fuser: Only check pathname on non-block devices !31

Changes in 23.3
===============
	* killall: check also truncated 16 char comm names Debian #912748
	* fuser: Return early if have nulls !18
	* peekfd: Add support for ARM64 !19
	* pstree: Add color by age #21
	* fuser: Use larger inode sizes #16

Changes in 23.2
===============
	* misc: Command names increased from 16 to 64 characters
	* buildsys: signals.c depends on signames.h !16
	* docs: Fix fuser.1 groff errors Debian #900225
	* killall: look at all namespaces by default
	* killall: Fix -INT option parsing #11
	* killall: ignore -n 0 #15
	* killall: another crack at fixing getopt #12 #13
	* peekfd: Attach to all threads option !15
	* pslog: Define PATH_MAX if required Debian:#905797

Changes in 23.1
===============
	* killall: Remove debug output Debian: #864753
	* docs: distribute pslog.1
	* docs: distribute README.md Debian: #864752
Changes in 23.0